// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Binary from ESNext: first 1`] = `
"#!/usr/bin/env node

/*! esnext-multibinary v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var _snakeCase = _interopDefault(require('lodash/snakeCase'));

var realWords = \\"Eine dicke Kuh lacht\\";

console.log(\\"Magic:\\", _snakeCase(realWords));
//# sourceMappingURL=first-cli.js.map
"
`;

exports[`Multi Binary from ESNext: second 1`] = `
"#!/usr/bin/env node

/*! esnext-multibinary v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var _camelCase = _interopDefault(require('lodash/camelCase'));

var realWords = \\"Eine dicke Kuh lacht\\";

console.log(\\"Magic:\\", _camelCase(realWords));
//# sourceMappingURL=second-cli.js.map
"
`;
